<resources>
    <string name="app_name">Meal planer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Hello chef,\nwelcome!</string>
    <string name="enter_email">"Enter your email address "</string>
    <string name="Email">Email</string>
    <string name="enter_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="sign">Sign In</string>
    <string name="or">or</string>
    <string name="google">Continue with Google</string>
    <string name="have_accuont">"Don’t have an account? "</string>
    <string name="singUp">Sign Up</string>
    <string name="already_a_member">Already a member?</string>
    <string name="singIn">Sign In</string>
    <string name="create_an_account">Create an account</string>
    <string name="signup_text">Let’s help you set up your account,\n it won’t take long.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password_again">Enter your password again</string>
    <string name="welcome_back_chief">Welcome Back, chief</string>
    <string name="meal_name">meal name</string>
    <string name="instructions">Instructions</string>
    <string name="more_details">Details</string>
    <string name="add_to">Add to</string>
    <string name="categories">Categories</string>
    <string name="see_more">See More</string>
    <string name="egyption_meals">Egyption Meals</string>
    <string name="beef">Beef</string>
    <string name="vegan">Vegan</string>
    <string name="meal_of_today">Meal of Today</string>
    <string name="Ingredients">Ingredients</string>
    <string name="Instructions">Instructions</string>
    <string name="Youtube">Youtube</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="calender">Calender</string>
    <string name="favourites">Favourites</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="no_favourites_item_nadd_some_meals_to_show">No Favourites item \nAdd some meals to show</string>
    <string name="category">Category</string>
    <string name="wrtie">search with category, country, ingredient</string>
    <string name="countery">Country</string>
    <string name="search_with_name">Enter Meal name</string>
    <string name="signout">SignOut</string>
    <string name="User">User</string>
    <string name="to_favourites">To Favourites</string>
    <string name="to_plans">To Plans</string>
    <string name="countinue_as_guest">Countinue as Guest</string>
    <string name="default_web_client_id">AIzaSyBooiqNEe_kzbM71CJJEvFr_0HMCXZ6AhM</string>
    <string name="sign_in_to_use_this_feature">Sign in to use this Feature</string>
</resources>