<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/searchFragment"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
        <item
            android:id="@+id/favFragment"
            android:icon="@drawable/ic_fav"
            android:title="@string/favourites" />
        <item
            android:id="@+id/calenderFragment"
            android:icon="@drawable/ic_calendar"
            android:title="@string/calender" />
        <item
            android:id="@+id/porfileFragment"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />



    </group>
</menu>