<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Profile.view.PorfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivMeal_ofToday"
        android:layout_width="158dp"
        android:layout_height="166dp"
        android:layout_marginTop="64dp"
        android:padding="4dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circleIV"
        app:srcCompat="@drawable/user_img"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/textView12"
        style="@style/header1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/User"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMeal_ofToday" />

    <Button
        android:id="@+id/btnPlans"
        android:layout_width="182dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary"
        android:text="@string/to_plans"
        app:layout_constraintStart_toStartOf="@+id/btnFavourites"
        app:layout_constraintTop_toBottomOf="@+id/btnFavourites" />

    <Button
        android:id="@+id/btnFavourites"
        android:layout_width="182dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary"
        android:text="@string/to_favourites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="182dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary"
        android:text="@string/signout"
        app:layout_constraintStart_toStartOf="@+id/btnPlans"
        app:layout_constraintTop_toBottomOf="@+id/btnPlans" />

</androidx.constraintlayout.widget.ConstraintLayout>